<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/registry_maincard_human"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/blue_standart"
                app:cardElevation="15dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/registry_secondcard_human"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:cardElevation="20dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_registration_user" />

                </com.google.android.material.card.MaterialCardView>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="80dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical"
                    android:paddingTop="54dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_activity_login_textfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:hint="@string/hint_login_edit"
                        android:inputType="textAutoComplete"
                        android:textColor="@color/blue_dark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_activity_password_textfield"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="0.9"
                            android:fontFamily="@font/comfortaa_light"
                            android:hint="@string/hint_password_edit"
                            android:inputType="textPassword"
                            android:password="true"
                            android:textColor="@color/blue_dark" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="5dp"
                            android:onClick="showPassword"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="5dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/password_eye"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="0.1"
                                android:src="@drawable/ic_eye_off" />

                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registration_activity_password_repeat_textfield"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="0.9"
                            android:fontFamily="@font/comfortaa_light"
                            android:hint="@string/hint_password_repeat_edit"
                            android:inputType="textPassword"
                            android:textColor="@color/blue_dark" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="5dp"
                            android:onClick="showPasswordRepeat"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="5dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/password_repeat_eye"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="0.1"
                                android:src="@drawable/ic_eye_off" />

                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/textview_info"
                        android:textAlignment="center"
                        android:textColor="@color/blue_dark"
                        android:textSize="19sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:text="@string/name_description"
                        android:textAlignment="center"
                        android:textColor="@color/blue_dark"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_textfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/comfortaa_light"
                        android:hint="@string/textedit_name"
                        android:inputType="textAutoComplete"
                        android:textColor="@color/blue_dark" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa_light"
                        android:inputType="textAutoComplete"
                        android:text="@string/textview_sex"
                        android:textAlignment="center"
                        android:textColor="@color/blue_dark"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/woman_radiobutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa_light"
                            android:onClick="womanRadioButtonClicked"
                            android:text="@string/radio_button_woman"
                            android:textColor="@color/blue_dark"
                            android:textSize="16sp" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/man_radiobutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa_light"
                            android:onClick="manRadioButtonClicked"
                            android:text="@string/radio_button_man"
                            android:textColor="@color/blue_dark"
                            android:textSize="16sp" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/other_radiobutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:fontFamily="@font/comfortaa_light"
                            android:onClick="otherRadioButtonClicked"
                            android:text="@string/radio_button_other"
                            android:textColor="@color/blue_dark"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:elevation="15dp"
                    android:fontFamily="@font/comfortaa_light"
                    android:onClick="createButtonClicked"
                    android:paddingTop="5dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_registration_okay"
                    android:textSize="18sp"
                    app:cornerRadius="15dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="15dp"
                    android:fontFamily="@font/comfortaa_light"
                    android:onClick="cancelButtonClicked"
                    android:paddingTop="5dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_registration_cancel"
                    android:textSize="18sp"
                    app:cornerRadius="15dp" />

            </LinearLayout>

        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/error_message_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:onClick="errorMessageClicked"
            android:paddingBottom="5dp"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/error"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/error_message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>