<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="backgroundClicked"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0.1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_apple"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.125"
            android:src="@drawable/ic_apple" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_banana"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_banana"
            android:layout_weight="0.125"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_bread"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_bread"
            android:layout_weight="0.125"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_cheese"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_cheese"
            android:layout_weight="0.125"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_fish"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_fish"
            android:layout_weight="0.125"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_taco"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_taco"
            android:layout_weight="0.125"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_watermelon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_watermelon"
            android:layout_weight="0.125"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_weight="0.125"
            android:id="@+id/icon_hotdog"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_hot_dog"/>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewLoginIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="mainIconClicked"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="164dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/app_name"
        android:textColor="@color/blue_standart"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewLoginIcon" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:fontFamily="@font/comfortaa_light"
                android:onClick="registerButtonClicked"
                android:paddingBottom="7dp"
                android:text="@string/button_registration"
                android:textSize="20sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:fontFamily="@font/comfortaa_light"
                android:onClick="loginButtonClicked"
                android:paddingBottom="7dp"
                android:text="@string/button_login_popup"
                android:textSize="20sp"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_edit_text_group"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_margin="10dp"

        android:visibility="invisible"

        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_light"
                android:hint="@string/hint_login_edit"
                android:inputType="textAutoComplete"
                android:textColor="@color/blue_standart" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_light"
                android:hint="@string/hint_password_edit"
                android:inputType="textPassword"
                android:textColor="@color/blue_standart" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/comfortaa_light"
                android:paddingBottom="7dp"
                android:text="@string/button_login"
                android:textSize="20sp"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>